--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body ng-app="daxude">
     <layout-header></layout-header>
     <main>
-      <div class="container" ng-view ng-scrollbars ng-scrollbars-config="defaultScrollbar"></div>
+      <div class="container" ui-view ng-scrollbars ng-scrollbars-config="defaultScrollbar"></div>
     </main>
     <layout-footer></layout-footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-resource.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <script src="https://cdn.jsdelivr.net/angular.chartjs/1.0.0/angular-chart.min.js"></script>
     <script src="assets/js/scrollbar.min.js"></script>
     <script src="assets/js/app.js"></script>
