--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <body ng-app="daxude">
     <layout-header></layout-header>
     <main>
-      <div class="container" ng-scrollbars ng-scrollbars-config="defaultScrollbar">
-        <ui-view></ui-view>
-      </div>
+      <div ui-view class="container fade" ng-scrollbars ng-scrollbars-config="defaultScrollbar"></div>
     </main>
     <layout-footer></layout-footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
