Small change to header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Daxude</title>
+    <title>Daxude - Teamspeak</title>
 
     <meta charset="UTF-8" />
     <meta name="author" content="David Op de Beeck" />
