--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.daxu.de/daxude-css/theme.css"/>
     <link rel="stylesheet" href="assets/css/app.css" />
   </head>
   <body ng-app="daxude">
